@@ -1,3 +1,8 @@
+2008-11-08  kitone  <kitone@gna.org>
+
+	* src/ExtensionManager.cc:
+	Add a test in load_path.
+
 2008-11-07  kitone  <kitone@gna.org>
 
 	* src/formats/AdvancedSubStationAlpha.h:
